--- a/src/app/projects/components/opal/opal.component.scss
+++ b/src/app/projects/components/opal/opal.component.scss
@@ -1,70 +1,10 @@
-.overview {
-  padding: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 56px;
-  justify-content: center;
-
-  .app {
-    overflow: hidden;
-
-    padding: 0px 8px 8px 8px;
-    border-radius: 16px;
-    background-color: var(--modalBgContent);
-    box-shadow: 0px 50px 100px -20px rgba(0, 0, 0, 0.15);
-    margin: auto;
-
-    img {
-      border-radius: 8px;
-      width: 100%;
-
-      object-fit: cover;
-      overflow: hidden;
-    }
-  }
-
-  .description {
-    width: Min(400px, 80%);
-
-    .preview {
-      margin: 32px 0px;
-
-      border-radius: 16px;
-      display: flex;
-      align-items: center;
-      gap: 16px;
-
-      li {
-        a {
-          display: flex;
-          gap: 8px;
-          align-items: center;
-          cursor: pointer;
-          padding: 4px;
-          border-radius: 24px;
-        }
-      }
-
-      .logo {
-        width: 24px;
-        display: flex;
-        align-items: center;
-        img {
-          width: 100%;
-        }
-      }
-    }
-  }
-}
-
 section {
-  padding: 6rem 0;
+  padding-top: 3rem;
   width: Min(1200px, 100%);
   margin: auto;
 
   .display {
-    margin: 40px 0;
+    margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 24px;
@@ -173,7 +113,7 @@ section {
   }
 
   .description {
-    width: Min(400px, 80%);
+    width: Min(600px, 100%);
 
     .preview {
       margin: 32px 0px;
@@ -342,6 +282,7 @@ section {
   }
 
   section {
+    padding: 6rem 0;
     .description {
       margin: auto;
     }
