--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,8 +35,7 @@ body.light {
 }
 
 p {
-  @include fontSize(14px, 25px);
-  font-weight: 300;
+  @include fontSize(1rem, 1.5rem, 300);
 }
 ul {
   list-style: none;
@@ -51,27 +50,31 @@ h3 {
 }
 
 h1 {
-  font-size: 48px;
+  @include fontSize(48px, 50px, 600);
 }
 
 h2 {
-  font-size: 48px;
-  line-height: 32px;
-  font-weight: 600;
+  @include fontSize(40px, 32px, 600);
 }
 
 h3 {
-  font-size: 32px;
-  line-height: 40px;
-  font-weight: 400;
+  @include fontSize(32px, 40px, 400);
 }
 
 h4 {
-  font-size: 24px;
-  line-height: 40px;
-  font-weight: 400;
+  @include fontSize(24px, 40px, 400);
   color: var(--textPrimary);
   margin-bottom: 16px;
+}
+
+a {
+  @include fontSize(14px, 20px, 400);
+  text-decoration: none;
+  color: var(--textBody);
+
+  &:hover {
+    color: var(--textBodyHover);
+  }
 }
 
 @media (min-width: 640px) {
@@ -79,7 +82,7 @@ h4 {
     padding: 0 3rem;
   }
   p {
-    @include fontSize(20px, 34px);
+    @include fontSize(18px, 34px, 300);
   }
 
   h1 {
@@ -101,13 +104,8 @@ h4 {
     font-weight: 400;
     margin-bottom: 24px;
   }
-}
 
-a {
-  text-decoration: none;
-  color: var(--textBody);
-
-  &:hover {
-    color: var(--textBodyHover);
+  a {
+    @include fontSize(16px, 24px, 400);
   }
 }
