--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -48,7 +48,8 @@
   --modalItemHover: #{$modalBgItemHover_dark};
 }
 
-@mixin fontSize($font-size, $line-height) {
+@mixin fontSize($font-size, $line-height, $font-weight) {
   font-size: $font-size;
   line-height: $line-height;
+  font-weight: $font-weight;
 }
